1.完成 start、version指令的脚本编写。